Adds updated walkthrough file with edit functionality

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -32,5 +32,5 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
-        android:text="Add" />
+        android:text="Save" />
 </RelativeLayout>
